Fix model z-index

--- a/src/context/modal.css
+++ b/src/context/modal.css
@@ -1,6 +1,6 @@
 .modal-backdrop {
   position: absolute;
-  z-index: 1;
+  z-index: 4;
   left: 0;
   top: 0;
   right: 0;
